src/snapshots/rmcp_openapi__tool_generator__tests__error_schema_structure.snap
---
source: src/tool_generator.rs
expression: error_schema
---
{
  "description": "Error response structure for tool execution failures",
  "properties": {
    "error": {
      "description": "Error information",
      "oneOf": [
        {
          "description": "Invalid parameter error with suggestions",
          "properties": {
            "parameter": {
              "description": "The parameter name that was invalid",
              "type": "string"
            },
            "suggestions": {
              "description": "Suggested correct parameter names",
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            "type": {
              "const": "invalid-parameter",
              "type": "string"
            },
            "valid_parameters": {
              "description": "All valid parameter names for this tool",
              "items": {
                "type": "string"
              },
              "type": "array"
            }
          },
          "required": [
            "type",
            "parameter",
            "suggestions",
            "valid_parameters"
          ],
          "type": "object"
        }
      ],
      "properties": {
        "message": {
          "description": "Human-readable error message",
          "type": "string"
        }
      },
      "required": [
        "message"
      ],
      "type": "object"
    }
  },
  "required": [
    "error"
  ],
  "type": "object"
}
