src/snapshots/rmcp_openapi__tool_generator__tests__test_property_sanitization_with_annotations.snap
---
source: src/tool_generator.rs
expression: result
---
{
  "additionalProperties": true,
  "properties": {
    "price": {
      "type": "number",
      "x-original-name": "price($)"
    },
    "user_name": {
      "type": "string",
      "x-original-name": "user name"
    },
    "validName": {
      "type": "string"
    }
  },
  "type": "object"
}
