src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_object_schema.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "additionalProperties": true,
  "description": "Pet object that needs to be added to the store",
  "type": "object",
  "x-content-type": "application/json",
  "x-location": "body"
}
