src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_string_schema.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "description": "Request body data",
  "maxLength": 100,
  "minLength": 1,
  "type": "string",
  "x-content-type": "application/json",
  "x-location": "body"
}
